--- a/.gitignore
+++ b/.gitignore
@@ -432,7 +432,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-./.angular/cache
+/BlogLab-UI/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
